--- a/current/full/resume.yaml
+++ b/current/full/resume.yaml
@@ -1,5 +1,5 @@
 name: Teja Sunku
-location: Redmond, WA (relocation ok)
+location: Redmond, WA (US Citizen, relocation ok)
 phone: "+1 (206) 445-3399"
 email: sunkut@outlook.com
 linkedin:
@@ -47,7 +47,7 @@ education:
 
   - school: University of Idaho
     dates: 2017 - 2021
-    degree: B.S., Statistics & Philosophy
+    degree: B.S., Statistics & Philosophy (Graduating Senior of the Year, College of Science)
 
 skills:
   - label: Languages
