--- a/current/main/resume.yaml
+++ b/current/main/resume.yaml
@@ -45,7 +45,7 @@ education:
 
   - school: University of Idaho
     dates: 2017 - 2021
-    degree: B.S., Statistics & Philosophy (Graduating Senior of the Year, College of Science)
+    degree: B.S., Statistics & Philosophy, Minor in Computer Science (Graduating Senior of the Year, College of Science)
 
 skills:
   - label: Languages
